Fixed more carousel-2 image/button clippage

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -297,7 +297,7 @@ header {
     position: relative;
     padding-left: 13%;
     padding-right: 13%;
-    aspect-ratio: 16/4.3;
+    aspect-ratio: 16/5;
 }
 
 .slide-2 {
